Add Code Changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class = 'fizbuzz'>
-            <div class="heading">Please Enter The Number You Want To FizBuzz!</div>
+            <div class="heading">Please Enter The Number You Want To FizBuzz! (Dont forget to press Enter)</div>
             <input type="text" class="inp">
             <p class="res">Your result will appear here!</p>
         </div>
